# diskmon

./: .flake8  .gitignore  .pre-commit-config.yaml  FRAMEWORK_APPLIED.md  Makefile  README.md  SETUP_COMPLETE.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.hypothesis/constants/: 32296e83843f5b1b  4ab48bff5d44edd8  4e5479db4cd4521f  7de5f668cfe775aa  9ad71a2334e4e4bd  a6ab679a0b85b86e  ac52b465348a82bd  c9c4adda6c6144be  d4645036cbf4d505  f57f749aae6f82d5  fef2bb05668a63a7  ff97cb647dc74ef6
.hypothesis/examples/04e6b3400353b141/: 38afa4805e607db6  6a46d1bc14835b59  ce95a56aa236cf20  de4939ff835ca1aa  e5f91774521f5c4d
.hypothesis/examples/6a46d1bc14835b59/: 94a9657a6e47fc52
.kiro/specs/disk-monitor/: design.md  requirements.md  tasks.md
.kiro/specs/gpl-v3-license-headers/: requirements.md
.kiro/specs/readme-generator/: requirements.md
disk_monitor/: __init__.py  __main__.py  collector.py  display.py  formatter.py  models.py  monitor.py
disk_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: validate_python_framework.py
tests/: test_collector_properties.py  test_display_properties.py  test_formatter_properties.py  test_monitor_properties.py
