[metadata]
name = disk-monitor
version = 1.0.0
author = Andreas Huemmer
author_email = andreas.huemmer@adminsend.de
description = Real-time disk usage and I/O performance monitor for Linux systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andreas-huemmer/disk-monitor
project_urls =
    Bug Tracker = https://github.com/andreas-huemmer/disk-monitor/issues
    Repository = https://github.com/andreas-huemmer/disk-monitor
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: System :: Monitoring
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.8
install_requires =
    psutil>=5.8.0

[options.packages.find]
where = .
include = disk_monitor*

[options.extras_require]
dev =
    pytest>=7.0.0
    hypothesis>=6.0.0
    flake8>=6.0.0
    black>=23.0.0
    isort>=5.12.0
    mypy>=1.0.0
test =
    pytest>=7.0.0
    hypothesis>=6.0.0
    pytest-cov>=4.0.0

[options.entry_points]
console_scripts =
    disk-monitor = disk_monitor.__main__:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    .eggs,
    *.egg-info

[isort]
profile = black
multi_line_output = 3
line_length = 88
known_first_party = disk_monitor

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True